# bilinear-vpd

./: .env.example  .gitignore  .silico-ownership  CLAUDE.md  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: checks.yaml  docker-build.yaml
nano_param_decomp/: pile_4L.py  run.py  simplestories_2L.py  simplestories_4L.py
papers/Stochastic_Parameter_Decomposition/: spd_paper.md
param_decomp/: base_config.py  configs.py  data.py  eval.py  identity_insertion.py  interfaces.py  log.py  losses.py  param_decomp_types.py  persistent_pgd.py  plotting.py  registry.py  routing.py  run_param_decomp.py  settings.py
param_decomp/adapters/: __init__.py  base.py  clt.py  clt_model.py  param_decomp.py  transcoder.py  transcoder_model.py
param_decomp/app/: CLAUDE.md  README.md  run_app.py
param_decomp/autointerp/: CLAUDE.md  __init__.py  config.py  db.py  interpret.py  llm_api.py  prompt_helpers.py  providers.py  repo.py  schemas.py  subsets.py
param_decomp/clustering/: CLAUDE.md  activations.py  clustering_run_config.py  compute_costs.py  consts.py  dataset.py  harvest_config.py  memberships.py  merge.py  merge_config.py  merge_history.py  paths.py  sample_membership.py  util.py  wandb_tensor_info.py
param_decomp/dataset_attributions/: CLAUDE.md  __init__.py  config.py  harvest.py  harvester.py  repo.py  storage.py
param_decomp/editing/: README.md  __init__.py  _editing.py  generate_token_divergence.py
param_decomp/graph_interp/: CLAUDE.md  __init__.py  config.py  db.py  graph_context.py  interpret.py  ordering.py  prompts.py  repo.py  schemas.py
param_decomp/harvest/: CLAUDE.md  analysis.py  config.py  db.py  harvest.py  harvester.py  intruder.py  repo.py  reservoir.py  sampling.py  schemas.py  storage.py
param_decomp/investigate/: CLAUDE.md  __init__.py  agent_prompt.py  schemas.py
param_decomp/metrics/: __init__.py  attn_patterns_recon_loss.py  base.py  ce_and_kl_losses.py  ci_histograms.py  ci_l0.py  ci_masked_recon_layerwise_loss.py  ci_masked_recon_loss.py  ci_masked_recon_subset_loss.py  ci_mean_per_component.py  component_activation_density.py  faithfulness_loss.py  hidden_acts_recon_loss.py  identity_ci_error.py  importance_minimality_loss.py  permuted_ci_plots.py  pgd_masked_recon_layerwise_loss.py  pgd_masked_recon_loss.py  pgd_masked_recon_subset_loss.py  pgd_utils.py  ppgd_eval_losses.py  stochastic_recon_layerwise_loss.py  stochastic_recon_loss.py  stochastic_recon_subset_ce_and_kl.py  stochastic_recon_subset_loss.py  unmasked_recon_loss.py  uv_plots.py
param_decomp/models/: batch_and_loss_fns.py  component_model.py  components.py  sigmoids.py
param_decomp/postprocess/: __init__.py  cli.py  config.py  pile.yaml
param_decomp/pretrain/: CLAUDE.md  __init__.py  run_info.py  train.py
param_decomp/scripts/: __init__.py  collect_attention_patterns.py  prompt_utils.py  resid_mlp1_global_sweep.yaml  rope_aware_qk.py  run.py  run_cli.py  run_local.py  sweep_params.yaml.example
param_decomp/topology/: __init__.py  canonical.py  gradient_connectivity.py  path_schemas.py  topology.py
param_decomp/utils/: component_utils.py  compute_utils.py  data_utils.py  distributed_utils.py  general_utils.py  git_utils.py  logging_utils.py  markdown.py  module_utils.py  run_utils.py  slurm.py  sqlite.py  target_ci_solutions.py  wandb_utils.py
phase1/: config.py  data.py  eval.py  main.py  model.py  show_samples.py  train.py
phase1/tests/: test_data.py  test_model.py  test_train.py
phase2/: analyze_components.py  analyze_induction.py  analyze_per_subj.py  analyze_skip.py  config.py  findings.md  run_decomposition.py  smoke_test.py
phase2/notes/: component_model_notes.md  nano_pd_notes.md  spd_paper_notes.md  vpd_paper_notes.md
runs/v10_chan_bigInit/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v11_chan_dampedInit/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v12_chan_long/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v13_scal_aggressive/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v14_rmsnorm/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v15_channel/: config.json  log.jsonl  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v16_chan_lr3e3/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v5/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v6_none_tightinit/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
runs/v7_scalar/: config.json  log.jsonl  model_final.pt  model_step_1000.pt  model_step_10000.pt  model_step_2000.pt  model_step_20000.pt  model_step_500.pt  model_step_5000.pt
scripts/: __init__.py  intruder_comparison.json
tests/: test_batch_and_loss_fns.py  test_component_model.py  test_component_utils.py  test_data_utils.py  test_distributed.py  test_eval.py  test_gather_all_tensors_distributed.py  test_gpt2.py  test_identity_insertion.py  test_ih_transformer.py  test_parse_wandb_run_path.py  test_permutation.py  test_pgd_source_sync_distributed.py  test_resid_mlp.py  test_schedule.py  test_seed_per_rank_distributed.py  test_spd_losses.py  test_target_ci_solutions.py  test_tms.py  test_wandb_run_loading.py
(+357 files in other folders)
